<resources>
    <string name="app_name">GithubApiTest</string>

    <string name="splash_label_1">Test Application</string>
    <string name="splash_label_2">Consume GitHub API</string>

    <string name="ops">Ops...</string>
    <string name="you_are_offline">You are offline.</string>
    <string name="activate_the_internet">Please active the internet and try again.</string>

    <string name="type_username_manually">Type the Username Manually</string>
    <string name="or">or</string>
    <string name="scan_qrcode">Scan a QR Code</string>
    <string name="type">Type</string>
    <string name="scan">Scan</string>
    <string name="invalid_qrcode">Invalid QRCode</string>

    <string name="inform_username">Please inform the Username to find the repositories</string>
    <string name="inform_password">Please inform the Password to find the repositories</string>
    <string name="optional_inform_password">In case you want to find private repositories, you should inform the password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_continue">Continue</string>
    <string name="must_inform_username">You must inform the Username</string>
    <string name="must_inform_password">You must inform the Password</string>

    <string name="repositories_of">Repositories of:</string>
    <string name="loading">Loading...</string>
    <string name="scrool_up">Scroll up for more repositories, if there are.</string>
    <string name="no_more_repositories">There are no more repositories.</string>
    <string name="problem_loading_repositories">Sorry. Problem loading repositories.</string>

    <string name="repository">Repository:</string>
    <string name="last_commits">Last Commits</string>

    <string name="author">Author:</string>
    <string name="date">Date:</string>
    <string name="message">Message:</string>

    <string name="problem_loading_commits">Sorry. Problem loading commits.</string>
</resources>
