<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".controller.OfflineActivity">

    <TextView
        android:id="@+id/txtOps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ops"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtOffLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/you_are_offline"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAtiveInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/activate_the_internet"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold" />

</LinearLayout>